src/test/deca/syntax/invalid/string.deca
// Description:
//    Chaîne de caractères valide
//
// Résultats:
//    programme non valide
//
// Historique:
//    créé le 13/01/2024

"azertyuiopqsdfghjklmwxcvbn,?;.:/!§ù%*µ^¨$£¤+=}°)]@^`|[{#~¹&é'(-è_çà1234567890"
